--- a/style.css
+++ b/style.css
@@ -29,3 +29,39 @@ header nav ul li a:hover, header nav ul li a:focus {
 	color: #e74c3c;
 	text-decoration: none;
 }
+
+/*				Slider section */
+
+.slider, .slider ul, .slider ul li {
+	height: 600px;
+	width: 100%;
+	text-align: center;
+	color: #fff;
+}
+
+.slider ul li h1 {
+	margin-top: 150px;
+	margin-bottom: 30px;
+	color: #fff;
+}
+
+.slider ul li p {
+	margin-bottom: 50px;
+}
+
+.slider ul li a {
+	padding: 10px 50px;
+	margin-right: 30px;
+	color: #fff;
+	font-weight: bold;
+}
+
+.slider ul li a:last-child {
+	margin-right: 0px;
+
+}
+
+.img1 {
+	background:url(img/slider/slider1.png);
+	background-size: 100% 100%;
+}
