--- a/style.css
+++ b/style.css
@@ -32,31 +32,35 @@ header nav ul li a:hover, header nav ul li a:focus {
 
 /*				Slider section */
 
-.slider, .slider ul, .slider ul li {
+.slider, .slider ul.slider-carousel, .slider ul.slider-carousel li {
 	height: 600px;
 	width: 100%;
 	text-align: center;
 	color: #fff;
 }
 
-.slider ul li h1 {
+.slider ul.slider-carousel li h1 {
 	margin-top: 150px;
 	margin-bottom: 30px;
 	color: #fff;
 }
 
-.slider ul li p {
+.slider ul.slider-carousel li p {
 	margin-bottom: 50px;
 }
 
-.slider ul li a {
+.slider ul.slider-carousel li a {
 	padding: 10px 50px;
 	margin-right: 30px;
 	color: #fff;
 	font-weight: bold;
+	transition:all 0.3s ease-in;
+	-webkit-transition:all 0.3s ease-in;
+	-moz-transition:all 0.3s ease-in;
+	-o-transition:all 0.3s ease-in;
 }
 
-.slider ul li a:last-child {
+.slider ul.slider-carousel li a:last-child {
 	margin-right: 0px;
 
 }
@@ -64,4 +68,32 @@ header nav ul li a:hover, header nav ul li a:focus {
 .img1 {
 	background:url(img/slider/slider1.png);
 	background-size: 100% 100%;
+}
+
+.slider ul.slider-carousel li a.cta1:hover {
+	background-color: #ff695a;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+}
+
+.slider ul.slider-carousel li a.cta2:hover {
+	background-color: #3f9cfa;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+}
+
+.slider ul.sliderpager li {
+	padding: 0 3px;
+	height: 28px;
+	line-height: 20px;
+}
+
+.slider ul.sliderpager li a {
+	color: #34495e;
+}
+
+.slider ul.sliderpager li.selected a {
+	color: #e74c3c;
 }
