--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ header {
 	color: #fff;
 	height: 112px;
 	line-height: 112px;
+	position: fixed;
+	width: 100%;
+	z-index: 100;
 }
 
 header a.logo {
