--- a/style.css
+++ b/style.css
@@ -100,3 +100,19 @@ header nav ul li a:hover, header nav ul li a:focus {
 .slider ul.sliderpager li.selected a {
 	color: #e74c3c;
 }
+
+/****		services section		****/
+
+.services {
+	text-align: center;
+}
+
+.services .services-content i {
+	font-size: 32px;
+	color: #555;
+}
+
+.sevices-header {
+	margin-bottom: 42px;
+}
+
