tempral commit with minimmum changes

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ header nav ul li a:hover, header nav ul li a:focus {
 	color: #555;
 }
 
-.sevices-header {
+.services-header {
 	margin-bottom: 42px;
 }
 
